# Baesich

./: .baesich-hist  .gitignore  Baesich.cabal  Baesich.hs  BaesichREPL.hs  INSTALLING.md  Parsing2.hs  README.md
.stack-work/: stack.sqlite3
.stack-work/ghci/b3c89ff6/: cabal_macros.h
.stack-work/install/x86_64-linux/29d23d8a95681cb5cf793cf26989b280653ba28ffc2892bcdfffe26238670b66/9.2.6/doc/Baesich-1.0/: LICENSE
