name:                Baesich
version:             1.0
license:             BSD3
license-file:        LICENSE
author:              Jauss Favorite
maintainer:          FavoriteJR@hendrix.edu
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable Baesich
  main-is:             BaesichREPL.hs
  other-modules:       Baesich, Parsing2
  other-extensions:    GADTs
  build-depends:       base >=4.10 && <4.18, haskeline >=0.7 && <0.9, parsec, containers, mtl
  default-language:    Haskell2010